examples/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: local
          route_config:
            name: local_route
            virtual_hosts:
            - name: static_response
              domains: ['*']
              routes:
              - match:
                  prefix: "/direct"
                direct_response:
                  status: 200
                  body:
                    inline_string: 'direct'
              - match: { prefix: / }
                route:
                  cluster: app
                  rate_limits:
                    - stage: 0
                      actions:
                        - {request_headers: {header_name: "userid", descriptor_key: "user_id"}}
                        - {request_headers: {header_name: ":method", descriptor_key: "req.method"}}
          http_filters:
          - name: envoy.filters.http.ratelimit
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
              domain: "test_namespace"
              failure_mode_deny: true
              rate_limit_service:
                grpc_service:
                  timeout: { seconds: 3 }
                  envoy_grpc:
                    cluster_name: rate_limit
          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: rate_limit
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: 0.0.0.0
        port_value: 50052
  - name: app
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 1323

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
